--- a/CSS/cover.css
+++ b/CSS/cover.css
@@ -3,6 +3,16 @@
  * Globals
  */
 
+.column {
+  width: 100%;
+}
+
+@media (min-width: 600px) {
+  .column {
+    width: 50%;
+  }
+}
+
 
 /* Custom default button */
 .btn-secondary,
