--- a/CSS/cover.css
+++ b/CSS/cover.css
@@ -3,16 +3,6 @@
  * Globals
  */
 
-.column {
-  width: 100%;
-}
-
-@media (min-width: 600px) {
-  .column {
-    width: 50%;
-  }
-}
-
 
 /* Custom default button */
 .btn-secondary,
@@ -29,13 +19,14 @@
  */
 
 body {
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgb(194, 39, 39);
+  text-shadow: 0 .05rem .1rem #FFFFFF80;
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
   font-family: cursive;
 }
 
 .cover-container {
-  max-width: 42em;
+  width: fit-content;
+
 }
 
 
@@ -71,12 +62,16 @@ body {
 }
 .typed-out{
   overflow: hidden;
-  border-right: .15em solid #ff0000;
+  border-right: .15em solid orange;
   white-space: nowrap;
   animation:
   typing 1s steps(20, end) forwards;
   font-size: 1.6rem;
   width: 0;
+}
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
 }
 
 .div3{
@@ -84,12 +79,6 @@ body {
 }
 .div2{
   text-align: left;
-}
-
-
-@keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
 }
 
 .navigation{
@@ -161,4 +150,119 @@ body {
   position:absolute;
   right:5%;
   top:70%;
+}
+.box
+{
+    position: relative;
+    width: 300px;
+    height: 300px;
+    display: flex;
+    justify-items: center;
+    margin: 40px;
+    transition: 0.5s;
+    background: #060C21;
+}
+.box:hover
+{
+    height: 400px;
+}
+.box .imgBx
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.box .imgBx img
+{
+    max-width: 100%;
+    opacity: 0.1;
+    transition: 0.5s;
+}
+.box:hover .imgBx img
+{
+    opacity: 1;
+}
+.box:before
+{
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right:-2px;
+    bottom:-2px;
+    background: rgb(255, 255, 255);
+    z-index: -1;
+}
+.box:after
+{
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right:-2px;
+    bottom:-2px;
+    background: rgb(255, 255, 255);
+    z-index: -1;
+    filter: blur(40px);
+}
+.box:before,
+.box::after
+{
+    background: linear-gradient(235deg,#89ff00,#010615,#00bcd4);
+}
+.box:nth-child(3)before,
+.box::after
+{
+    background: linear-gradient(235deg,#ff005e,#010615,#fbff00);
+}
+.box:nth-child(2)before,
+.box::after
+{
+    background: linear-gradient(235deg,#772aff,#010615,#2164f3);
+}
+.box .content
+{
+    position: absolute;
+    bottom: 0;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    height: 90px;
+    background: rgba(0, 0, 0, 0.4);
+    justify-content: center;
+    opacity: 0;
+    transition: 0.5s;
+    color: white;
+    align-items: center;
+    text-align: center;
+}
+.box:hover .content
+{
+    opacity: 1;
+}
+.box .content h2
+{
+    font-size: 20px;
+    color: #FFF;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 1px;
+}
+.box .content span
+{
+    font-size: 14px;
+    color: #FFF;
+    font-weight: 200;
+    letter-spacing: 2px;
+}
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'popping', sans-serif;
 }
